Kubedefs-Propertyquest/Clientdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: propertyquestClient
  labels:
    app: propertyquestClient
spec:
  replicas: 2
  selector:
    matchLabels:
      app: propertyquestClient
  template:
    metadata:
      labels:
        app: propertyquestClient
    spec:
      containers:
        - name: propertyquestClient-container
          image: mohmeek/propertyquest-aws-monolithic-frontend
          ports:
            - containerPort: 3000
              name: client-port
