Kubedefs-Propertyquest/Serverdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: propertyquestserver
  labels:
    app: propertyquestserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: propertyquestserver
  template:
    metadata:
      labels:
        app: propertyquestserver
    spec:
      containers:
        - name: propertyquestserver-container
          image: mohmeek/propertyquest-aws-monolithic-backend
          ports:
            - containerPort: 8080
              name: server-port
