Kubedefs-Propertyquest/Clientsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  selector:
    app: propertyquestclient
  ports:
    - protocol: TCP
      port: 3000
      targetPort: propertyquestclient-port
