Kubedefs-Propertyquest/ServerSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector:
    app: propertyquestserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: server-port
