Kubedefs-Propertyquest/propertydbSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: propertydb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: propertydb-port
